--- a/js/wp-imgur/tests/index.html
+++ b/js/wp-imgur/tests/index.html
@@ -23,6 +23,7 @@
         overflow: auto;
         z-index: 9999;
         border: 1px solid #ccc;
+        visibility: hidden;
       }
       #ember-testing {
         zoom: 50%;
